--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "scripts": {
-    "build": "npm-run-all buildTs copyResources buildNS buildManifest",
+    "build": "npm-run-all buildTs copyResources",
     "buildTs": "tsc -p tsconfig.json",
-    "buildNS": "bin/buildNS.bash",
-    "buildManifest": "bin/generateManifest.bash",
     "clean": "rm -rf build/*",
     "copyResources": "mkdir -p src/resources && cp -r src/resources/ build/",
-    "re": "npm-run-all clean buildTs copyResources buildNS buildManifest",
-    "webserver": "node bin/webserver.js -p 9182 -d build --enable_cors"
+    "re": "npm-run-all clean buildTs copyResources"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "typescript": "^4.7.4"
   }
 }
