Implemented LeetCode solver for Coding Challenges
Automated solving module fetches coding challenges, solves them.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,21 @@
     "rootDir": "src/",
     "baseUrl": "src/",
     "paths": {
-      "/lib/*": [
-        "lib/*"
-      ]
+      "lib/*": [
+        "lib/*",
+      ],
+      "logic/*": [
+        "logic/*",
+      ],
+      "modules/*": [
+        "modules/*",
+      ],
+      "sys/*": [
+        "sys/*",
+      ],
+      "coding_contracts/*": [
+        "coding_contracts/*",
+      ],
     },
     "outDir": "build/",
     "moduleResolution": "node",
