Added common data structures

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
       "coding_contracts/*": [
         "coding_contracts/*",
       ],
+      "structures/*": [
+        "structures/*",
+      ],
     },
     "outDir": "build/",
     "moduleResolution": "node",
